================================================================================
Change history for glaciers
================================================================================

HIGHEST PRIORITY:

HIGH PRIORITY:
- revert change to names of time-based graphs made on 8/28/08
- bug: snowfall visualization doesn't draw properly on PowerPC Mac OS 10.4, rewrite to create atmosphere path directly
- bug: loading full-size background image causes OutOfMemoryException, exceeds JVM heap space [crop svg, talk with Archie]
- birds-eye view should half the slope of zoomed view so that 80km is at far right
- sky above snow in zoomed view on large monitors

MEDIUM PRIORITY:
- glacier growth from zero length still takes a long time, and then speeds up [Archie will fix model]
- replace "glacier picture" check box with a button [to left of clock controls, "Real glacier", does nothing if pushed again]
- switch user-interface between English and metric units [yes]
- climate experiments interface (start with a time estimate) [on hold]
- Experiments module [on hold]
- behavior of budget meter (snap-to-ice) is hard to discover and potentially misleading [defer for interviews]
- "steady state" feature needs to advance clock to the time at which the glacier would reach its steady state [defer]
- "steady state" feature needs to fill in missing data in time-dependent graphs [defer]
- "steady state" feature needs to fill glacier with debris and surface ripples (and create moraine?) [try to do this]
- always collect data for time-based graphs, keep "latest" & "historical" data points, compress historical, limit historical size [defer]
- add zoom in/out button for time-based graphs; show scrolling "latest" data or complete "historical" [defer]
- implement Save/Load feature [yes]
- make sure everything works properly when clock is paused [yes]
- should "Glacial Budget vs Elevation" chart show negative ablation? [change to +, add dashed green line for -]