@@ -107,8 +107,8 @@ title.climateControls=Climate
 title.error=Error
 title.graphControls=Graphs
 
-title.timeVersusGlacierLength=time vs. glacier length
-title.timeVersusEquilibriumLineAltitude=time vs. equilibrium line altitude
+title.glacierLengthVersusTime=glacier length vs. time
+title.elaVersusTime=equilibrium line altitude vs. time
 title.glacialBudgetVersusElevation=glacial budget vs. elevation
 title.temperatureVersusElevation=air temperature vs. elevation
 
